crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_stepflow__no_command.snap
---
source: crates/stepflow-main/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: 'stepflow' requires a subcommand but one was not provided
  [subcommands: run, serve, submit, test, list-components, repl, help]

Usage: stepflow [OPTIONS] <COMMAND>

For more information, try '--help'.
