crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_stepflow__with_log_file.snap
---
source: crates/stepflow-main/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-file=/tmp/test.log"
    - "--help"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the argument '--log-file <FILE>' cannot be used multiple times

Usage: stepflow [OPTIONS] <COMMAND>

For more information, try '--help'.
